# ADS1256

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
ads1256/: ads1256.py  ads1256_constants.py  ads1256_default_config.py  constants.py
examples/: multichannel.py  read_voltage.py  set_gain.py
